add terra repo for topgrade

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -18,6 +18,9 @@ modules:
         destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
 
   - type: dnf
+    repos:
+      files:
+        - terra.repo
     install:
       packages:
         - btop
@@ -26,8 +29,8 @@ modules:
         - input-remapper
         - nextcloud-client
         - nextcloud-client-nautilus
+        - topgrade
         #- https://download3.omnissa.com/software/CART26FQ4_LIN64_RPMPKG_2512/Omnissa-Horizon-Client-2512-8.17.0-20187591429.x64.rpm
-        #- topgrade
     remove:
       packages:
         # example: removing firefox (in favor of the flatpak)
