--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -25,6 +25,8 @@ modules:
       packages:
         - btop
         - cargo
+        - docker-cli
+        - docker-compose
         - git
         - input-remapper
         - nextcloud-client
@@ -33,10 +35,8 @@ modules:
         #- https://download3.omnissa.com/software/CART26FQ4_LIN64_RPMPKG_2512/Omnissa-Horizon-Client-2512-8.17.0-20187591429.x64.rpm
     remove:
       packages:
-        # example: removing firefox (in favor of the flatpak)
-        # "firefox" is the main package, "firefox-langpacks" is a dependency
         - firefox
-        - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+        - firefox-langpacks
 
   - type: default-flatpaks
     configurations:
