--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -33,6 +33,11 @@ modules:
         - nextcloud-client-nautilus
         - topgrade
         #- https://download3.omnissa.com/software/CART26FQ4_LIN64_RPMPKG_2512/Omnissa-Horizon-Client-2512-8.17.0-20187591429.x64.rpm
+    group-install:
+      with-optional: true # install optional packages from group
+      packages:
+        - development-tools
+        - development-libraries
     remove:
       packages:
         - firefox
