try adding /usr/etc/skel again

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -88,3 +88,8 @@ modules:
   - type: chezmoi
     repository: "https://github.com/saltscratch/dotfiles" # my dotfiles repo
     file-conflict-policy: replace # override changed files with those from the repo
+
+  - type: files
+    files:
+      - source: system
+        destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
