--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -35,9 +35,10 @@ modules:
 
   - type: default-flatpaks
     configurations:
-      - notify: true # Send notification after install/uninstall is finished (true/false)
+      - notify: false # Send notification after install/uninstall is finished (true/false)
         scope: system
-        install: # system flatpaks we want all users to have and not remove
+      - scope: user # Also add Flathub user repo, but no user packages
+        install: 
           - ca.desrt.dconf-editor
           - com.discordapp.Discord
           - com.github.tchx84.Flatseal
@@ -64,7 +65,6 @@ modules:
           - org.mozilla.Thunderbird
           - org.videolan.VLC
           - page.codeberg.libre_menu_editor.LibreMenuEditor
-      - scope: user # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
 
