--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -85,9 +85,9 @@ modules:
 
   - type: gschema-overrides
 
-  - type: chezmoi
-    repository: "https://github.com/saltscratch/dotfiles" # my dotfiles repo
-    file-conflict-policy: replace # override changed files with those from the repo
+  # - type: chezmoi
+  #   repository: "https://github.com/saltscratch/dotfiles" # my dotfiles repo
+  #   file-conflict-policy: replace # override changed files with those from the repo
 
   - type: files
     files:
