--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -12,6 +12,13 @@ image-version: latest
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
+  - type: os-release
+    properties:
+      ID: giddyos
+      ID_LIKE: silverblue
+      NAME: GiddyOS
+      PRETTY_NAME: GiddyOS
+
   - type: dnf
     repos:
       files:
