--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -45,9 +45,13 @@ modules:
       - notify: true # Send notification after install/uninstall is finished (true/false)
         scope: system
         install: 
+          - org.mozilla.firefox
+          - org.mozilla.Thunderbird
+          - com.mattjakeman.ExtensionManager
+          - com.valvesoftware.Steam
+          - com.visualstudio.code
           - ca.desrt.dconf-editor
           - com.github.tchx84.Flatseal
-          - com.mattjakeman.ExtensionManager
           - com.ranfdev.DistroShelf
           - com.usebottles.bottles
           - io.github.flattool.Ignition
@@ -60,16 +64,12 @@ modules:
           - com.discordapp.Discord
           - com.heroicgameslauncher.hgl
           - com.spotify.Client
-          - com.valvesoftware.Steam
-          - com.visualstudio.code
           - io.github.Faugus.faugus-launcher
           - io.github.kolunmi.Bazaar
           - net.lutris.Lutris
           - org.gnome.SimpleScan
           - org.gnome.TextEditor
           - org.libreoffice.LibreOffice
-          - org.mozilla.firefox
-          - org.mozilla.Thunderbird
           - org.videolan.VLC
       - scope: user
 
@@ -101,3 +101,8 @@ modules:
     files:
       - source: system
         destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
+
+  - type: yafti
+    custom-flatpaks:
+      - Firefox : org.mozilla.firefox
+      - Thunderbird : org.mozilla.Thunderbird
