--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -42,7 +42,7 @@ modules:
 
   - type: default-flatpaks
     configurations:
-      - notify: true # Send notification after install/uninstall is finished (true/false)
+      - notify: false # Send notification after install/uninstall is finished (true/false)
         scope: system
         # install: 
         #   - org.mozilla.firefox
